# audio-files-scripts

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_lint_test.yml  build_test_tags_fixer.yml
anulataggingpkg/common/: data_model.py
anulataggingpkg/podcasts_fetcher/: README.md  fetch_podcasts.py  requirements.txt
anulataggingpkg/tags_fixer/: README.md  abstract_file_renamer.py  abstract_tags_provider.py  fix_tags.py  main.py  manual_tags_provider.py  requirements.txt
metadata_fixer/: fix_metadata.py
podcasts_fetcher/: fetch_podcasts.py
test/: test_empty.py
